Revert "IGBF-2729:Remove fix size of top bar in CSS to align 'Install IGB' button."
This reverts commit 760e95ca92e01999bebe5f6ebaf2398dfa1188cc.

--- a/htdocs/css/menu.css
+++ b/htdocs/css/menu.css
@@ -4,7 +4,7 @@
   z-index: 1000;
   top: 0;
   width: 100vw;
-  height: auto;
+  height: 53px;
   background-color: #222;
 }
 
